package = { name='view', version='0.0.0', edition='2024', description = 'View PNG images'}

[dependencies]
bytemuck='*'
num = { git='https://github.com/Matthias-Fauconneau/num' }
vector = { git='https://github.com/Matthias-Fauconneau/vector' }
image = { git='https://github.com/Matthias-Fauconneau/image', features = ['io'] }
ui = { git='https://github.com/Matthias-Fauconneau/ui' }
vulkano = { git='https://github.com/vulkano-rs/vulkano', default-features=false, features=['macros'] } # same version as ui (which needs drm modifier from git version)
vulkano-spirv = { git='https://github.com/Matthias-Fauconneau/vulkano-spirv' }

[build-dependencies]
naga = { version='*', features = ['wgsl-in','spv-out'] }
bytemuck = { version='*' }

[patch.'https://github.com/vulkano-rs/vulkano']
vulkano = { git='https://github.com/Matthias-Fauconneau/vulkano'  } # drm modifier

[patch.'https://github.com/Matthias-Fauconneau/ui']
ui={path='../ui'}

[patch.'https://github.com/Matthias-Fauconneau/image']
image={path='../image'}
